--- a/files/supervisord__vogon.conf
+++ b/files/supervisord__vogon.conf
@@ -16,6 +16,17 @@ autostart=true
 autorestart=true
 startsecs=10
 
+[program:vogon-web-celery-beat]
+command = /var/opt/wsgi/vogon-web/bin/celery_beat_start
+directory = /var/opt/wsgi/vogon-web/vogon-web
+user = vogon-web
+numprocs=1
+stdout_logfile=/var/opt/wsgi/vogon-web/logs/celery-beat.log
+stderr_logfile=/var/opt/wsgi/vogon-web/logs/celery-beat.log
+autostart=true
+autorestart=true
+startsecs=10
+
 ; Need to wait for currently executing tasks to finish at shutdown.
 ; Increase this if you have very long running tasks.
 stopwaitsecs = 600
